[package]
name = "lookcentres"
version = "0.1.0"
authors = ["Matt Johnston <matt@ucc.asn.au>"]
edition = "2018"
description = "lookcentres"

[package.metadata.bundle]
# for cargo bundle
identifier = "au.asn.ucc.matt.centres"

[dependencies]

druid = "0.6"
rand = "0.7"
rand_pcg = "0.2"

#rayon = "1.4"
# Until https://github.com/rayon-rs/rayon/pull/786 is merged
rayon = { git = "https://github.com/cuviper/rayon", branch = "flat-iter" }

[profile.release]
opt-level = 's'
lto = true
