[package]
name = "centres"
version = "0.1.0"
authors = ["Matt Johnston <matt@ucc.asn.au>"]
edition = "2018"

[package.metadata.bundle]
# for cargo bundle
identifier = "au.asn.ucc.matt.centres"

[dependencies]

druid = "0.6"
rand = "0.7"
rand_pcg = "0.2"
rayon = "1.4"

[profile.release]
opt-level = 's'
lto = true
